ajout du plein ecran et de la fenetre max par default

--- a/MainWindow/toolbar.ui
+++ b/MainWindow/toolbar.ui
@@ -300,6 +300,9 @@
    </property>
   </action>
   <action name="actionPleinEcran">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Plein ecran</string>
    </property>
