ajout des toolsTips

--- a/MainWindow/toolbar.ui
+++ b/MainWindow/toolbar.ui
@@ -398,6 +398,9 @@
    <property name="text">
     <string>Restaurer Tool</string>
    </property>
+   <property name="toolTip">
+    <string>Restaurer</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+Y</string>
    </property>
@@ -413,6 +416,9 @@
    <property name="text">
     <string>Zoom Tool Plus</string>
    </property>
+   <property name="toolTip">
+    <string>Zoomer</string>
+   </property>
   </action>
   <action name="actionZoomMoinsTool">
    <property name="icon">
@@ -421,6 +427,9 @@
    </property>
    <property name="text">
     <string>Zoom Tool Moins</string>
+   </property>
+   <property name="toolTip">
+    <string>Dézoomer</string>
    </property>
   </action>
   <action name="actionFusionTool">
@@ -431,6 +440,9 @@
    <property name="text">
     <string>Fusion Tool</string>
    </property>
+   <property name="toolTip">
+    <string>Fusionner 2 noeuds du graphe</string>
+   </property>
   </action>
   <action name="actionOuvrirTool">
    <property name="icon">
@@ -440,6 +452,9 @@
    <property name="text">
     <string>Ouvrir Tool</string>
    </property>
+   <property name="toolTip">
+    <string>Ouvrir un fichier</string>
+   </property>
   </action>
   <action name="actionChoisirCouleurTool">
    <property name="icon">
@@ -448,6 +463,9 @@
    </property>
    <property name="text">
     <string>Choisir Couleur Tool</string>
+   </property>
+   <property name="toolTip">
+    <string>Choisir la couleur du noeud sélectionné</string>
    </property>
   </action>
   <action name="actionFusionner">
@@ -538,6 +556,9 @@
    <property name="text">
     <string>EnregistrerSous</string>
    </property>
+   <property name="toolTip">
+    <string>Enregistrer Sous</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+Shift+S</string>
    </property>
@@ -550,6 +571,9 @@
    <property name="text">
     <string>NouveauTableauAleatoire</string>
    </property>
+   <property name="toolTip">
+    <string>Générer un nouveau tableau aléatoire</string>
+   </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
    </property>
@@ -561,6 +585,9 @@
    </property>
    <property name="text">
     <string>Exporter</string>
+   </property>
+   <property name="toolTip">
+    <string>Exporter le graphe</string>
    </property>
   </action>
  </widget>
