--- a/MainWindow/mainwidget.ui
+++ b/MainWindow/mainwidget.ui
@@ -32,12 +32,15 @@
       <bool>false</bool>
      </property>
      <property name="tabsClosable">
+      <bool>false</bool>
+     </property>
+     <property name="movable">
       <bool>true</bool>
      </property>
      <property name="tabBarAutoHide">
       <bool>true</bool>
      </property>
-     <widget class="QWidget" name="tab_1">
+     <widget class="QWidget" name="temp_tab_1">
       <attribute name="title">
        <string>Tab 1</string>
       </attribute>
@@ -54,7 +57,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab_2">
+     <widget class="QWidget" name="temp_tab_2">
       <attribute name="title">
        <string>Tab 2</string>
       </attribute>
