--- a/MainWindow/tabcontentwidget.ui
+++ b/MainWindow/tabcontentwidget.ui
@@ -22,11 +22,11 @@
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QTableWidget" name="table">
-     <property name="maximumSize">
-      <size>
-       <width>800</width>
-       <height>1000</height>
-      </size>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
      <property name="sizeAdjustPolicy">
       <enum>QAbstractScrollArea::AdjustToContentsOnFirstShow</enum>
@@ -80,6 +80,11 @@
      <row>
       <property name="text">
        <string>9</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>10</string>
       </property>
      </row>
      <row>
@@ -140,6 +145,11 @@
      <row>
       <property name="text">
        <string>22</string>
+      </property>
+     </row>
+     <row>
+      <property name="text">
+       <string>23</string>
       </property>
      </row>
      <row>
@@ -300,6 +310,11 @@
      <column>
       <property name="text">
        <string>Y</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Z</string>
       </property>
      </column>
      <item row="0" column="0">
