--- a/MainWindow/tabcontentwidget.ui
+++ b/MainWindow/tabcontentwidget.ui
@@ -332,6 +332,12 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
+     <property name="minimumSize">
+      <size>
+       <width>300</width>
+       <height>0</height>
+      </size>
+     </property>
      <property name="maximumSize">
       <size>
        <width>800</width>
