--- a/MainWindow/tabcontentwidget.ui
+++ b/MainWindow/tabcontentwidget.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>842</width>
-    <height>469</height>
+    <height>401</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>842</width>
-    <height>469</height>
+    <height>401</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -327,7 +327,7 @@
    <item>
     <widget class="QGraphicsView" name="graphArea">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+      <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -336,12 +336,6 @@
       <size>
        <width>300</width>
        <height>0</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>800</width>
-       <height>1000</height>
       </size>
      </property>
      <property name="verticalScrollBarPolicy">
