--- a/MainWindow/mainwidget.ui
+++ b/MainWindow/mainwidget.ui
@@ -35,10 +35,10 @@
       <bool>false</bool>
      </property>
      <property name="movable">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <property name="tabBarAutoHide">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <widget class="QWidget" name="temp_tab_1">
       <attribute name="title">
