--- a/MainWindow/helpdialog.ui
+++ b/MainWindow/helpdialog.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>1000</width>
+    <height>1000</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>400</width>
-    <height>300</height>
+    <width>1000</width>
+    <height>1000</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -32,7 +32,7 @@
       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;title&gt;Page d'aide de GraphET&lt;/title&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt; font-weight:400; font-style:normal;&quot; bgcolor=&quot;#1c1c1c&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Noto Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot; bgcolor=&quot;#1c1c1c&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a name=&quot;menu2&quot;&gt;&lt;/a&gt;&lt;a href=&quot;tutorial.html&quot;&gt;&lt;span style=&quot; font-family:'monospace'; font-size:8pt; font-weight:600; text-decoration: underline; color:#979797;&quot;&gt;T&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-family:'monospace'; font-size:8pt; font-weight:600; color:#979797;&quot;&gt;utoriel d'utilisation&lt;/span&gt;&lt;span style=&quot; font-family:'monospace'; font-size:8pt; color:#aeaeae;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a name=&quot;menu2&quot;&gt;&lt;/a&gt;&lt;a href=&quot;PageAide.html&quot;&gt;&lt;span style=&quot; font-family:'monospace'; font-size:8pt; font-weight:600; text-decoration: underline; color:#979797;&quot;&gt;P&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-family:'monospace'; font-size:8pt; font-weight:600; color:#979797;&quot;&gt;age d'aide&lt;/span&gt;&lt;span style=&quot; font-family:'monospace'; font-size:8pt; color:#aeaeae;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a name=&quot;menu2&quot;&gt;&lt;/a&gt;&lt;a href=&quot;faq.html&quot;&gt;&lt;span style=&quot; font-family:'monospace'; font-size:8pt; font-weight:600; text-decoration: underline; color:#979797;&quot;&gt;F&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-family:'monospace'; font-size:8pt; font-weight:600; color:#979797;&quot;&gt;.A.Q&lt;/span&gt;&lt;span style=&quot; font-family:'monospace'; font-size:8pt; color:#aeaeae;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
