commit final la PLS

--- a/MainWindow/tabcontentwidget.ui
+++ b/MainWindow/tabcontentwidget.ui
@@ -347,6 +347,11 @@
     </widget>
    </item>
   </layout>
+  <action name="actionmdrclickable">
+   <property name="text">
+    <string>mdrclickabke</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
