--- a/MainWindow/tabcontentwidget.ui
+++ b/MainWindow/tabcontentwidget.ui
@@ -327,7 +327,7 @@
    <item>
     <widget class="QGraphicsView" name="graphArea">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
