--- a/MainWindow/helpdialog.ui
+++ b/MainWindow/helpdialog.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Aide</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
